# talos-linux-api

./: .pdm-python  LICENSE  README.md  invoke.yaml  pyproject.toml  tasks.py
src/talos_linux_api/v1_2_0/common/: __init__.py
src/talos_linux_api/v1_2_0/machine/: __init__.py
src/talos_linux_api/v1_2_0/resource/: __init__.py
src/talos_linux_api/v1_2_0/securityapi/: __init__.py
src/talos_linux_api/v1_2_0/time/: __init__.py
src/talos_linux_api/v1_3_0/machine/: __init__.py
src/talos_linux_api/v1_3_0/resource/: __init__.py
src/talos_linux_api/v1_3_0/resource/config/: __init__.py
src/talos_linux_api/v1_3_0/storage/: __init__.py
src/talos_linux_api/v1_3_0/talos/resource/definitions/cluster/: __init__.py
src/talos_linux_api/v1_3_0/talos/resource/definitions/cri/: __init__.py
src/talos_linux_api/v1_3_0/talos/resource/definitions/enums/: __init__.py
src/talos_linux_api/v1_3_0/talos/resource/definitions/etcd/: __init__.py
src/talos_linux_api/v1_3_0/talos/resource/definitions/files/: __init__.py
src/talos_linux_api/v1_3_0/talos/resource/definitions/hardware/: __init__.py
src/talos_linux_api/v1_3_0/talos/resource/definitions/kubespan/: __init__.py
src/talos_linux_api/v1_4_0/google/rpc/: __init__.py
src/talos_linux_api/v1_4_0/machine/: __init__.py
src/talos_linux_api/v1_4_0/resource/network/: __init__.py
src/talos_linux_api/v1_4_0/storage/: __init__.py
src/talos_linux_api/v1_5_0/cluster/: __init__.py
src/talos_linux_api/v1_5_0/inspect/: __init__.py
src/talos_linux_api/v1_5_0/machine/: __init__.py
src/talos_linux_api/v1_6_0/common/: __init__.py
src/talos_linux_api/v1_6_0/storage/: __init__.py
tests/: conftest.py  test_imports.py
(+26 files in other folders)
